Bug 695992 - Internal hyperlinks lost when converting to pdf and password specified
Summary: Internal hyperlinks lost when converting to pdf and password specified
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 9.15
Hardware: PC Windows 7
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-15 13:50 UTC by Andrew Maurer
Modified: 2015-06-09 02:17 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Maurer 2015-05-15 13:50:16 UTC
This is a follow up to:
Bug 695162 - Internal hyperlinks lost when converting to pdf
http://bugs.ghostscript.com/show_bug.cgi?id=695162

I first compile Ulrike's example using dvips.exe then gswin64.exe:
\documentclass{book}
\usepackage{hyperref}
\begin{document}
\chapter{Titre}
lala\ref{chp:deux}
\chapter{Titre}\label{chp:deux}
\end{document}

Links work if I don't specify a pdf password in the ghostscript options:
-sDEVICE=pdfwrite -dBATCH -dNOPAUSE -sOutputFile="%bm.pdf" "%bm.ps"

but links don't work if I specify a password:
-sDEVICE=pdfwrite -dBATCH -dNOPAUSE -sUserPassword=pass -sOwnerPassword=pass  -sOutputFile="%bm.pdf" "%bm.ps"

I'm using Ghostscript 9.15 for Windows (64 bit)
Comment 1 Ken Sharp 2015-06-09 02:17:16 UTC
Fixed in commit cb48631e7254e0843a08f075777cbecb43947823